--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
-        "jquery-mask-plugin": "^1.14.15"
+        "jquery-mask-plugin": "^1.14.15",
+        "recharts": "^1.7.0"
     }
 }
