--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.15",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
+        "react": "^16.9.0",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "jquery-mask-plugin": "^1.14.15",
-        "recharts": "^1.7.0"
+        "react-select": "^3.0.4",
+        "recharts": "^1.7.0",
+        "select": "^1.1.2"
     }
 }
